--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,14 @@
 .nav{
     grid-area: n;
     background-color: blue;
+    padding:40px;
 }
-.item{
+.item a{
+    
     color: white;
+    text-decoration: none;
 }
 
-.item.active{
+.item a.active{
     color: gold;
 }
