--- a/src/App.css
+++ b/src/App.css
@@ -10,11 +10,14 @@
     grid-gap: 10px;
     grid-template-rows: 60px 1fr;
     grid-template-columns: 2fr 10fr;
+
   /*grid-gap: 10px;*/
 
 }
 
 .app-wrapper-content{
+    justify-self: start;
     grid-area: c;
     background-color: rgb(255, 255, 128);
+
 }
